--- a/Baby-Gear.html
+++ b/Baby-Gear.html
@@ -93,8 +93,8 @@
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="679" data-image-height="679" src="images/71C7t3hJsL._SX679_.jpg">
+              <div class="u-container-layout u-similar-container u-container-layout-1">
+                <img alt="" class="u-image u-image-default u-image-1" data-image-width="679" data-image-height="679" src="images/71C7t3hJsL._SX679_.jpg">
                 <h3 class="u-text u-text-default u-text-1">
                   <span style="font-weight: 700;">K</span>
                   <span style="font-weight: 700;">angaroo Bag/Baby Carry Sling/Back/Front Carrier<span style="font-weight: 700;">
@@ -103,7 +103,9 @@
                   </span>
                 </h3>
                 <p class="u-text u-text-2">
-                  <br>Chinmay Kids 4-in-1 Adjustable Baby Carrier Cum Kangaroo Bag/Baby Carry Sling/Back/Front Carrier for Baby with Safety Belt and Buckle Straps (Black &amp; Sky Blue)&nbsp;<br>Product'&nbsp; Amazon Link is given below.<br>Order it Now.<br>
+                  <br>Chinmay Kids 4-in-1 Adjustable Baby Carrier Cum Kangaroo Bag/Baby Carry Sling/Back/Front Carrier for Baby with Safety Belt and Buckle Straps (Black &amp; Sky Blue)&nbsp;<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3E4cQ9f" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-1" target="_blank">
                   <span style="font-size: 1rem;">amazon</span> link
@@ -111,20 +113,23 @@
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="522" data-image-height="522" src="images/81GWajZwfaL._SX522_.jpg">
+              <div class="u-container-layout u-similar-container u-container-layout-2">
+                <img alt="" class="u-image u-image-default u-image-2" data-image-width="522" data-image-height="522" src="images/81GWajZwfaL._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-3"> Stroller/Buggy</h3>
-                <p class="u-text u-text-4"> Luvlap Tutti Frutti Stroller/Buggy, Compact &amp; Travel Friendly, for Baby/Kids, 6-36 Months (Printed Black)<br>Product's Amazon Link is given below.<br>Order it Now.<br>
+                <p class="u-text u-text-4"> Luvlap Tutti Frutti Stroller/Buggy, Compact &amp; Travel Friendly, for Baby/Kids, 6-36 Months (Printed Black)<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3E4s9i2" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-2" target="_blank">amazon link</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="679" data-image-height="679" src="images/91UfdsjrRPL._SX679_.jpg">
+              <div class="u-container-layout u-similar-container u-container-layout-3">
+                <img alt="" class="u-image u-image-default u-image-3" data-image-width="679" data-image-height="679" src="images/91UfdsjrRPL._SX679_.jpg">
                 <h3 class="u-text u-text-default u-text-5"> Baby Carrier with 3 carry positions</h3>
                 <p class="u-text u-text-6"> Luvlap Adore Baby Carrier with 3 carry positions, for 6 to 24 months baby, Max weight Up to 18 Kgs (Grey)<br>
-                  <br>Product'Amazon Link is given below.<br>Order it Now.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/37hqkC5" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
@@ -141,7 +146,10 @@
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="522" data-image-height="522" src="images/13.jpg">
                 <h3 class="u-text u-text-default u-text-1"> LuvLap Baby Bath Chair/Sling (Green) Pack Of 1</h3>
-                <p class="u-text u-text-2"> Can be used with mostly any Bathtub;Made of durable, High-Quality materials for zero toxicity;Bath Chair feet (or base?) are equipped with non-slip vacuum suction pads to protect against slipping;Light, Easy to clean, carry and store. Foldable : No;Grip-handle to help mom grip the bath chair while bathing the baby;Suitable for newborn &amp; small babies who cannot sit up straight;Age: Approx. 0-6 m+ I Weight Capacity: Up to 9 kgs</p>
+                <p class="u-text u-text-2"> Can be used with mostly any Bathtub;Made of durable, High-Quality materials for zero toxicity;Bath Chair feet (or base?) are equipped with non-slip vacuum suction pads to protect against slipping;Light, Easy to clean, carry and store. Foldable : No;Grip-handle to help mom grip the bath chair while bathing the baby;Suitable for newborn &amp; small babies who cannot sit up straight;Age: Approx. 0-6 m+ I Weight Capacity: Up to 9 kgs<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.<br>
+                </p>
                 <a href="https://amzn.to/3uL0gbN" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">Amazon link</a>
               </div>
             </div>
@@ -150,7 +158,10 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="522" data-image-height="522" src="images/22.jpg">
                 <h3 class="u-text u-text-default u-text-3"> Motherly Stylish Babies Diaper Bags for Mothers - Economical Version (Orange)<span style="font-weight: 700;"></span>
                 </h3>
-                <p class="u-text u-text-4"> The bag measures: 41 cm x 25 cm x 14 cm, Weighs: 700 gm; Exteriors &amp; Interiors: 3 LAYERED PROTECTION. Waterproof Oxford Fabric (BPA free) 2. Innermost PU layer (for strength &amp; stability) 3. Sandwiched nylon fibers</p>
+                <p class="u-text u-text-4"> The bag measures: 41 cm x 25 cm x 14 cm, Weighs: 700 gm; Exteriors &amp; Interiors: 3 LAYERED PROTECTION. Waterproof Oxford Fabric (BPA free) 2. Innermost PU layer (for strength &amp; stability) 3. Sandwiched nylon fibers<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
+                </p>
                 <a href="https://amzn.to/3rw9tCN" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">Amazon link</a>
               </div>
             </div>
@@ -158,7 +169,9 @@
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="522" data-image-height="522" src="images/81DGu7f1KiL._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-5"> Bey Bee Mama's Bag {Diaper Bag} (Purple, One Size)</h3>
-                <p class="u-text u-text-6"> Pockets Nos : 6 , Bag Dimensions : 40 cm X 30 cm X 18 cm<br>Type - Nursery Baby Diaper Bag , Durable material , easy to clean.<br>2 Zipped compartment in the front, Shoulder strap adjusts to your liking , Zip top gives you easy access and secure storage<br>Adjustable Strong shoulder strap and Very Handy, Bey Bee use elastic in side pocket for the safe and secure milk and water bottle it holds bottle very tight.<br>Bey Bee diaper bag is very safe its washable and waterproof which can protect the things from rain.
+                <p class="u-text u-text-6"> Pockets Nos : 6 , Bag Dimensions : 40 cm X 30 cm X 18 cm<br>Type - Nursery Baby Diaper Bag , Durable material , easy to clean.<br>2 Zipped compartment in the front, Shoulder strap adjusts to your liking , Zip top gives you easy access and secure storage<br>Adjustable Strong shoulder strap and Very Handy, Bey Bee use elastic in side pocket for the safe and secure milk and water bottle it holds bottle very tight.<br>Bey Bee diaper bag is very safe its washable and waterproof which can protect the things from rain.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3EqocEI" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">Amazon link</a>
               </div>
