--- a/Bikes_Rides.html
+++ b/Bikes_Rides.html
@@ -99,7 +99,8 @@
                   <span style="font-weight: 700;">Kids Road Runner Scooter</span>
                 </h3>
                 <p class="u-text u-text-2"> Zofey Kids Road Runner Scooter, Skating Ride on, Scratch Free with 4 Adjustable Level Handlebar &amp; Foldable Design Scooter for Kids Above 3 Years<br>
-                  <br>Product Amazon link is given below.<br>Order Now.
+                  <br> Please
+click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/3vbJ6TR" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
@@ -111,7 +112,8 @@
                   <span style="font-weight: 700;">Road Runner Kick Scooter</span>
                 </h3>
                 <p class="u-text u-text-4"> R for Rabbit Road Runner Kick Scooter for Kids of Above 3 Years, Skating Scooter for Boys, Girls, Scratch Free LED PU Wheels, 4-Level Adjustable Handlebar &amp; Foldable Design &amp; Wide Standing Board, Weight Capacity 75Kgs<br>
-                  <br>Product Amazon link is given below.<br>Order Now.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/37IWG8Q" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">Amazon link</a>
               </div>
@@ -124,7 +126,8 @@
                   <span style="font-weight: 700;"></span>
                 </h3>
                 <p class="u-text u-text-6"> R for Rabbit Road Runner Kick Scooter for Kids of Above 3 Years, Skating Scooter for Boys, Girls, Scratch Free LED PU Wheels, 4-Level Adjustable Handlebar &amp; Foldable Design &amp; Wide Standing Board, Weight Capacity 75Kgs<br>
-                  <br>Product Amazon link is given below.<br>Order Now.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3E7656v" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">Amazon link</a>
               </div>
@@ -142,7 +145,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="500" data-image-height="500" src="images/q.jpeg">
                 <h3 class="u-text u-text-default u-text-1">&nbsp;​Music Scooter for Kids</h3>
                 <p class="u-text u-text-2">Smart Saver Heavy Duty Kick Music Scooter for Kids &amp; Toddlers with 4 Adjustable Height 4 Wheel Scooters for Kids-Flashing Wheels - Foldable RED<br>
-                  <br>Product Amazon link is given in below.<br>Order it now.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3viSrJE" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1">amazon link</a>
               </div>
@@ -155,7 +159,8 @@
                   </span>
                 </h3>
                 <p class="u-text u-text-4"> Magpie Magic Car/Swing Car Ride-On Toy Car for Kids (1-12 Year Old) (Tulip Pink)<br>
-                  <br>Product's Amazon link is given in below.<br>Order it now.
+                  <br>Please
+click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/3uqd3jF" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2">amazon link</a>
               </div>
@@ -165,7 +170,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="522" data-image-height="522" src="images/3.jpg">
                 <h3 class="u-text u-text-default u-text-5"> Monkey Ride</h3>
                 <p class="u-text u-text-6">Sample text. Click to select the text box. Click again or double click to start editing the text.<br>
-                  <br>roduct's Amazon link is given in below.<br>Order it now.<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3DZbg8v" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3">amazon link</a>
               </div>
