--- a/Products.html
+++ b/Products.html
@@ -96,7 +96,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="522" data-image-height="522" src="images/711DBUR31bS._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-1">&nbsp;Soft Animal&nbsp;</h3>
                 <p class="u-text u-text-2"> Webby Soft Animal Plush Elephant Toy 20cm, Grey<br>
-                  <br>Product Amazon link is given below.<br>Order Now.
+                  <br>Please
+click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/3JEWYuS" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
@@ -106,7 +107,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="522" data-image-height="439" src="images/61mJMCgct1L._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-3"> Racing Car</h3>
                 <p class="u-text u-text-4">Sample text. Click to select the text box. Click again or double click to start editing the text.<br>
-                  <br>Product Amazon link is given below.<br>Order Now.<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.w.<br>
                 </p>
                 <a href="https://amzn.to/3LWnQbp" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-2" target="_blank">amazon link</a>
               </div>
@@ -116,7 +118,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="500" data-image-height="500" src="images/51kkqLxCibL.jpg">
                 <h3 class="u-text u-text-default u-text-5"> Bubble Machine Gun</h3>
                 <p class="u-text u-text-6"> BabyGo Gatling Bubble Machine Gun Outdoor &amp; Indoor Toys for Boys and Girls, 8 Hole- Electric Bubble Maker Gun for Toddlers Toys (Pink)<br>
-                  <br>Product Amazon link is given below.<br>Order Now.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3uzMxVh" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
