--- a/Toys.html
+++ b/Toys.html
@@ -99,7 +99,9 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="498" data-image-height="500" src="images/WhatsAppImage2022-04-08at7.40.48PM2-min.jpeg">
                 <h3 class="u-text u-text-default u-text-1">&nbsp; <span style="font-weight: 700;">FlipFury Toy Blaster</span>
                 </h3>
-                <p class="u-text u-text-2"> Nerf Zombie Strike FlipFury Toy Blaster with 2 Flipping Drums and 12 Official Nerf Zombie Strike Elite Darts – For Kids, Teens, Adults.<br>Product's Amazon link is given below.<br>Order it now.
+                <p class="u-text u-text-2"> Nerf Zombie Strike FlipFury Toy Blaster with 2 Flipping Drums and 12 Official Nerf Zombie Strike Elite Darts – For Kids, Teens, Adults.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/35V8qF0" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
@@ -112,7 +114,9 @@
                     <span style="font-weight: 400;"></span>
                   </span>&nbsp;​Foam Blaster Gun
                 </h3>
-                <p class="u-text u-text-4"> NHR Blaze Storm Foam Blaster Gun Toy, Safe and Long Range Shooting Gun, (5 Foam Bullets and 5 Suction Dart Bullets)-Blue.<br>Product's Amazon link is given below.<br>Order it now.<br>
+                <p class="u-text u-text-4"> NHR Blaze Storm Foam Blaster Gun Toy, Safe and Long Range Shooting Gun, (5 Foam Bullets and 5 Suction Dart Bullets)-Blue.<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3DSji2K" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">amazon link</a>
               </div>
@@ -121,7 +125,10 @@
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="350" data-image-height="350" src="images/WhatsAppImage2022-04-08at7.40.48PM-min.jpeg">
                 <h3 class="u-text u-text-default u-text-5"> Fully Automatic Gun&nbsp;</h3>
-                <p class="u-text u-text-6"> Batrix Scrap Blaze Storm Soft Bullet Fully Automatic Gun 40 Soft Bullets Included (Gun 40 Soft Bullets)</p>
+                <p class="u-text u-text-6"> Batrix Scrap Blaze Storm Soft Bullet Fully Automatic Gun 40 Soft Bullets Included (Gun 40 Soft Bullets)<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.<br>
+                </p>
                 <a href="https://amzn.to/3ukkCZ8" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">Amazon link</a>
               </div>
             </div>
@@ -138,7 +145,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="500" data-image-height="384" src="images/11.jpg">
                 <h3 class="u-text u-text-default u-text-1"> Rock Crawler Off Roader Monster Truck</h3>
                 <p class="u-text u-text-2"> Popsugar THRC699-103BL 4 Wheel Drive 1:18 Rock Crawler Off Roader Monster Truck with 2.4GHz Remote Control Rechargeable Toy for Kids, Blue<br>
-                  <br>Product&nbsp; Amazon link is given in below.<br>Order it now.<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3KrfIiQ" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
@@ -148,7 +156,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="500" data-image-height="500" src="images/51-FGI3Sr6L.jpg">
                 <h3 class="u-text u-text-default u-text-3"> METRO TOY'S &amp; GIFT Cars</h3>
                 <p class="u-text u-text-4"> METRO TOY'S &amp; GIFT Cars 3 Theme Diecast Metal Toy Car Play Set for Kids Best Gifts Toys for Kids Boys - Set of 6, Multi color)<br>
-                  <br>Product Amazon link is given in below.<br>Order it now.
+                  <br> Please
+click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/37H9CvY" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">amazon link</a>
               </div>
@@ -158,7 +167,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="522" data-image-height="467" src="images/61xMuqLG3iL._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-5"> Baby Toy Cars&nbsp;</h3>
                 <p class="u-text u-text-6"> PLUSPOINT Baby Toy Cars for 1 Year Old Boy | 7 Set Push and Go Vehicles Friction Powered Cars Toy for Toddlers | Early Educational Toys and Birthday Gift for 1 2 3 Years Old Boys Girls(7 pc Transport)<br>
-                  <br>Product Amazon link is given in below.<br>Order it now.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3KEd897" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
@@ -176,7 +186,8 @@
                 <img alt="" class="u-image u-image-default u-image-1" data-image-width="522" data-image-height="522" src="images/91EN8LPcgxL._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-1"> Nerf Fortnite SP-L Elite Dart Blaster</h3>
                 <p class="u-text u-text-2"> Nerf Fortnite SP-L Elite Dart Blaster with Detachable Barrel, 6 Elite Darts (Multicolour)<br>
-                  <br>Product's Amazon Link is given below.<br>Order it Now.
+                  <br> Please
+click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/3JglwdC" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
@@ -186,7 +197,8 @@
                 <img alt="" class="u-image u-image-default u-image-2" data-image-width="569" data-image-height="569" src="images/71U5a2Ek0gL._SX569_2.jpg">
                 <h3 class="u-text u-text-default u-text-3"> Toy Blaster</h3>
                 <p class="u-text u-text-4"> Nerf Zombie Strike FlipFury Toy Blaster with 2 Flipping Drums and 12 Official Nerf Zombie Strike Elite Darts – For Kids, Teens, Adults<br>
-                  <br>Product's Amazon Link is given below.<br>Order it Now.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3rvoqVV" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">amazon link</a>
               </div>
@@ -196,7 +208,8 @@
                 <img alt="" class="u-image u-image-default u-image-3" data-image-width="569" data-image-height="569" src="images/71v68kgBOwL._SX569_.jpg">
                 <h3 class="u-text u-text-default u-text-5"> &nbsp;Plastic Rival Kronos</h3>
                 <p class="u-text u-text-6"> NERF Plastic Rival Kronos XVIII-500 (blue), for Adult &amp; Kids Ages 14 and Up, Multi color<br>
-                  <br>Product's Amazon Link is given below.<br>Order it Now.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3ug3a88" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
@@ -214,7 +227,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="522" data-image-height="741" src="images/31.jpg">
                 <h3 class="u-text u-text-default u-text-1"> Silly Circus Jack in the Box</h3>
                 <p class="u-text u-text-2"> ColourMulti colorMaterialPlush, Tin, MetalBrandSchyllingItem Weight0.99 PoundsItem Dimensions LxWxH15.7 x 14.7 x 14.5 Centimeters<br>
-                  <br>Product link is given below.<br>Order now
+                  <br> Please
+click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/3rns8AI" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
@@ -225,7 +239,8 @@
                 <h3 class="u-text u-text-default u-text-3"> Jester Jack in the Box<span style="font-weight: 700;"></span>
                 </h3>
                 <p class="u-text u-text-4"> ColourMulticolorMaterialPlush, MetalBrandSchyllingItem Weight0.45 KilogramsThemeCat, Puppet<br>
-                  <br>Product Link is given below.<br>Order now.
+                  <br>Please
+click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/3jwde6P" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">amazon link</a>
               </div>
@@ -235,7 +250,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="512" data-image-height="741" src="images/12.jpg">
                 <h3 class="u-text u-text-default u-text-5"> &nbsp;Puppy Dancing Jack in the Box</h3>
                 <p class="u-text u-text-6"> ColourMulti-coloredMaterialPlushBrandSchyllingItem Dimensions LxWxH14 x 14 x 25.4 CentimetersShapeSquareItem Weight1 Pounds<br>
-                  <br>Product link is given below.<br>Order Now.
+                  <br> Please
+click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/37JePn2" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
