--- a/Others.html
+++ b/Others.html
@@ -96,7 +96,9 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="679" data-image-height="679" src="images/51i5fkWhjzL._SX679_.jpg">
                 <h3 class="u-text u-text-default u-text-1"> Selfie Stick with Wireless Remote<span style="font-weight: 700;"></span>
                 </h3>
-                <p class="u-text u-text-2"> Hoteon Mobilife Bluetooth Extendable Selfie Stick with Wireless Remote and Tripod Stand for iPhone X/iPhone 8/8 Plus/iPhone 7/iPhone 7 Plus/Galaxy Note 8/Google More (Black)<br>Product Amazon link is given below.<br>Order Now.
+                <p class="u-text u-text-2"> Hoteon Mobilife Bluetooth Extendable Selfie Stick with Wireless Remote and Tripod Stand for iPhone X/iPhone 8/8 Plus/iPhone 7/iPhone 7 Plus/Galaxy Note 8/Google More (Black)<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today..
                 </p>
                 <a href="https://amzn.to/3JyquSQ" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-1">Amazon link</a>
               </div>
@@ -105,7 +107,9 @@
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="679" data-image-height="679" src="images/71ReOObbsWL._SX679_.jpg">
                 <h3 class="u-text u-text-default u-text-3"> HP 14s, AMD Ryzen 5-5500U 14 inches FHD</h3>
-                <p class="u-text u-text-4"> HP 14s, AMD Ryzen 5-5500U 14 inches FHD, IPS, Micro-Edge Display Laptop (8GB RAM/512GB SSD /Radeon Graphics/Windows 11/Alexa/Backlit Keyboard/MS Office/1.46kg, 14s-fq1092au<br>rProduct Amazon link is given below.<br>Order Now.<br>
+                <p class="u-text u-text-4"> HP 14s, AMD Ryzen 5-5500U 14 inches FHD, IPS, Micro-Edge Display Laptop (8GB RAM/512GB SSD /Radeon Graphics/Windows 11/Alexa/Backlit Keyboard/MS Office/1.46kg, 14s-fq1092au<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/37baLMA" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-2">Amazon link</a>
               </div>
@@ -114,7 +118,9 @@
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="679" data-image-height="679" src="images/71KCwNV6MuL._SX679_.jpg">
                 <h3 class="u-text u-text-default u-text-5"> OPPO A31</h3>
-                <p class="u-text u-text-6"> OPPO A31 (Mystery Black, 6GB RAM, 128GB Storage) with No Cost EMI/Additional Exchange Offers<br>Prroduct Amazon link is given below.<br>Order Now.<br>
+                <p class="u-text u-text-6"> OPPO A31 (Mystery Black, 6GB RAM, 128GB Storage) with No Cost EMI/Additional Exchange Offers<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3vbI0Ht" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
