--- a/Watch.html
+++ b/Watch.html
@@ -101,7 +101,8 @@
                   </span>
                 </h3>
                 <p class="u-text u-text-2"> Fire-Boltt Ring Bluetooth Calling Smartwatch with SpO2 &amp; 1.7” Metal Body with Blood Oxygen Monitoring, Continuous Heart Rate, Full Touch &amp; Multiple Watch Faces (Black), M (BSW005)<br>
-                  <br>Product's Amazon link is given in below.<br>Order it Now.
+                  <br> Please
+click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/3jlIFAF" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-grey-90 u-btn-1" target="_blank">amazon link</a>
               </div>
@@ -111,7 +112,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="679" data-image-height="679" src="images/21.png">
                 <h3 class="u-text u-text-default u-text-3">Sample Headline</h3>
                 <p class="u-text u-text-4"> BoAt Flash Edition Smartwatch with Activity Tracker,Multiple Sports Modes,Full Touch 1.3" Screen,Gesture Control,Sleep Monitor,Camera &amp; Music Control,IP68 Dust,Sweat &amp; Splash Resistance(Moon Red)<br>
-                  <br>Product's Amazon link is given in below.<br>Order it Now.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today..<br>
                 </p>
                 <a href="https://amzn.to/3JphzDe" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-grey-90 u-btn-2">Amazon link</a>
               </div>
@@ -121,7 +123,8 @@
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="679" data-image-height="679" src="images/1.jpg">
                 <h3 class="u-text u-text-default u-text-5"> gital Men's &amp; Boy's Watch</h3>
                 <p class="u-text u-text-6"> SKMEI Analogue - Digital Men's &amp; Boy's Watch (Black Dial Black Colored Strap)<br>
-                  <br>Product's Amazon link is given in below.<br>Order it Now.<br>
+                  <br> Please
+click the Amazon link below to order. Place your order today.<br>
                 </p>
                 <a href="https://amzn.to/3O2mf5Q" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-2 u-text-grey-90 u-btn-3" target="_blank">amazon link</a>
               </div>
