--- a/Baby-Gear.html
+++ b/Baby-Gear.html
@@ -21,7 +21,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/12-removebg-preview.png",
+		"logo": "images/12-removebg-preview-5.png",
 		"sameAs": [
 				"https://www.facebook.com/SengarPihu/",
 				"https://www.instagram.com/baby_styleproducts/",
@@ -37,7 +37,7 @@
   </head>
   <body class="u-body u-xl-mode"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-35c2"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="208" data-image-height="145">
-          <img src="images/12-removebg-preview.png" class="u-logo-image u-logo-image-1">
+          <img src="images/12-removebg-preview-5.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-align-left u-dropdown-icon u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem;">
@@ -182,7 +182,7 @@ click the Amazon link below to order. Place your order today.<br>
       </div>
     </section>
     <section class="u-clearfix u-section-3" id="sec-731d">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
@@ -199,10 +199,13 @@ click the Amazon link below to order. Place your order today.<br>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-2">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="2000" data-image-height="1333" src="images/33.svg">
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="522" data-image-height="522" src="images/71dtUb7LS3L._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-3">Sample Headline</h3>
-                <p class="u-text u-text-4">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                <a href="" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2">learn more</a>
+                <p class="u-text u-text-4"> LuvLap Sports Convertible Car Seat for Baby &amp; Kids, Rearward Facing Baby car seat (0m - 2yr) &amp; Forward Facing (2-4yr), New Born to 4 Years, Upto 36 Kgs, European Safety Standard Certified&nbsp;<br>
+                  <br>lease
+click the Amazon link below to order. Place your order today.
+                </p>
+                <a href="https://amzn.to/3MaoQsz" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">amazon link</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
@@ -221,7 +224,7 @@ click the Amazon link below to order. Place your order today.<br>
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-0d5c"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="208" data-image-height="145">
-          <img src="images/12-removebg-preview-5.png" class="u-logo-image u-logo-image-1">
+          <img src="images/12-removebg-preview.png" class="u-logo-image u-logo-image-1">
         </a>
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="facebook" target="_blank" href="https://www.facebook.com/SengarPihu/"><span class="u-icon u-social-facebook u-social-icon u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-6f84"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-6f84"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
