--- a/Baby-Gear.html
+++ b/Baby-Gear.html
@@ -51,7 +51,7 @@
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Products.html" style="padding: 10px 20px;">Products</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Toys.html">Toys</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Watch.html">Watch</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Apparel-for-Babies.html">Apparel for Babies</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Others.html">Others</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Baby-Gear.html">Baby Gear</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-white" href="Bikes_Rides.html">Bikes_Rides</a>
@@ -65,7 +65,7 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-3"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Products.html">Products</a><div class="u-nav-popup"><ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10 u-nav-4"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Toys.html">Toys</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Watch.html">Watch</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Apparel-for-Babies.html">Apparel for Babies</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Others.html">Others</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Baby-Gear.html">Baby Gear</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bikes_Rides.html">Bikes_Rides</a>
@@ -203,7 +203,7 @@ click the Amazon link below to order. Place your order today.<br>
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="522" data-image-height="522" src="images/71dtUb7LS3L._SX522_.jpg">
                 <h3 class="u-text u-text-default u-text-3"> Car Seat for Baby &amp; Kids</h3>
                 <p class="u-text u-text-4"> LuvLap Sports Convertible Car Seat for Baby &amp; Kids, Rearward Facing Baby car seat (0m - 2yr) &amp; Forward Facing (2-4yr), New Born to 4 Years, Upto 36 Kgs, European Safety Standard Certified&nbsp;<br>
-                  <br>lease
+                  <br>P​lease
 click the Amazon link below to order. Place your order today.
                 </p>
                 <a href="https://amzn.to/3MaoQsz" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">amazon link</a>
@@ -213,7 +213,10 @@ click the Amazon link below to order. Place your order today.
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="500" data-image-height="500" src="images/41BOXcOvPML-removebg-preview.png">
                 <h3 class="u-text u-text-default u-text-5"> Adjustable Hip SEAT Baby Carrier Soft &amp; Comfortable</h3>
-                <p class="u-text u-text-6"> INFANTSO 4-in-1 Adjustable Hip SEAT Baby Carrier Soft &amp; Comfortable with Safety Belt, Multi-Utility Pockets &amp; Wide Cushioned Straps (Blue)</p>
+                <p class="u-text u-text-6"> INFANTSO 4-in-1 Adjustable Hip SEAT Baby Carrier Soft &amp; Comfortable with Safety Belt, Multi-Utility Pockets &amp; Wide Cushioned Straps (Blue)<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.<br>
+                </p>
                 <a href="https://amzn.to/3EyHnME" class="u-active-none u-border-2 u-border-grey-90 u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">amazon link</a>
               </div>
             </div>
@@ -226,27 +229,36 @@ click the Amazon link below to order. Place your order today.
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
+              <div class="u-container-layout u-similar-container u-container-layout-1">
                 <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="679" data-image-height="799" src="images/61DSAnR02eL._SX679_1.jpg">
                 <h3 class="u-text u-text-default u-text-1"> 4-in-1 Adjustable Baby Carrier Cum Kangaroo Bag/Honeycomb</h3>
-                <p class="u-text u-text-2">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
+                <p class="u-text u-text-2">Sample text. Click to select the text box. Click again or double click to start editing the text.<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.<br>
+                </p>
                 <a href="https://amzn.to/3KYGMpG" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-1" target="_blank">amazon link</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="2000" data-image-height="1333" src="images/42.svg">
-                <h3 class="u-text u-text-default u-text-3">Sample Headline</h3>
-                <p class="u-text u-text-4">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                <a href="" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2">learn more</a>
+              <div class="u-container-layout u-similar-container u-container-layout-2">
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="522" data-image-height="522" src="images/61C7GaMbBQL._SX522_.jpg">
+                <h3 class="u-text u-text-default u-text-3"> Baby Cot&nbsp;</h3>
+                <p class="u-text u-text-4"> R for Rabbit Hide and Seek Plus Convertible Bedside Baby Cot |&nbsp;Compact folds for easy storage |&nbsp;Toy Bar Soothing Music Playpen for Kids 0 to 3 Years Old with Play Yard (Grey (Grey))<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.<br>
+                </p>
+                <a href="https://amzn.to/37w1I9l" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-2" target="_blank">amazon link</a>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="2000" data-image-height="1333" src="images/42.svg">
-                <h3 class="u-text u-text-default u-text-5">Sample Headline</h3>
-                <p class="u-text u-text-6">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                <a href="" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3">learn more</a>
+              <div class="u-container-layout u-similar-container u-container-layout-3">
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="460" data-image-height="500" src="images/5189QAHawQL.jpg">
+                <h3 class="u-text u-text-default u-text-5">&nbsp;​Mosquito Net</h3>
+                <p class="u-text u-text-6"> Amardeep and Co Toddler Mattress with Mosquito Net (Pink) - MT-01-Pink<br>
+                  <br>Please
+click the Amazon link below to order. Place your order today.<br>
+                </p>
+                <a href="https://amzn.to/3EDej6D" class="u-active-none u-border-2 u-border-black u-border-hover-palette-2-base u-btn u-button-style u-hover-none u-palette-2-light-3 u-text-body-color u-btn-3" target="_blank">Amazon Link</a>
               </div>
             </div>
           </div>
