--- a/Baby-Gear.html
+++ b/Baby-Gear.html
@@ -376,7 +376,7 @@ click the Amazon link below to order. Place your order today.<br>
           <a class="u-social-url" target="_blank" data-type="YouTube" title="YouTube" href="https://www.youtube.com/channel/UCVpwAydBNUYzVLjKTvmEhJQ/videos"><span class="u-icon u-social-icon u-social-youtube u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-8b5d"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-8b5d"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M74.9,33.3H37.3c-7.4,0-13.4,6-13.4,13.4v18.8c0,7.4,6,13.4,13.4,13.4h37.6c7.4,0,13.4-6,13.4-13.4V46.7 C88.3,39.3,82.3,33.3,74.9,33.3L74.9,33.3z M65.9,57l-17.6,8.4c-0.5,0.2-1-0.1-1-0.6V47.5c0-0.5,0.6-0.9,1-0.6l17.6,8.9 C66.4,56,66.4,56.8,65.9,57L65.9,57z"></path></svg></span>
           </a>
         </div>
-        <p class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-1"> One-stop-shop for Amazon baby products.&nbsp;&nbsp;</p>
+        <p class="u-align-center u-text u-text-1"> One-stop-shop for Amazon baby products.&nbsp;&nbsp;</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/one-page-template" target="_blank">
